[package]
name = "ldraw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.86"
directories = "=5.0.1"
eframe = { version = "=0.27.2", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = { version = "=0.27.2", features = ["serde"] }
egui-phosphor = "=0.5.0"
home = "=0.5.5"
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
smithay-clipboard = "=0.7.2"
tiny-skia = "=0.11.4"
uuid = { version = "=1.8.0", features = ["serde", "v4"] }
